fix css of game_shousai_page

--- a/app/views/gameshousai/home.html.erb
+++ b/app/views/gameshousai/home.html.erb
@@ -31,7 +31,7 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" class="page-scroll">Sign In</a></li>
+                <li><a href="http://localhost:3000/users/sign_in" class="page-scroll">Sign In</a></li>
             </ul>
         </div>
      </div>
