edit login signup form and chance to using model

--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -509,7 +509,7 @@ color: #777;
 .picture-user img {
     border-radius: 50%;
     width: 50px !important;
-    height: 50px;
+    height: 50px !important;
 }
 
 .picture-user {
