--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,37 @@
-<h2>Sign up</h2>
+<div class="limiter">
+	<div class="container-login100" style="background-image: url('../assets/slider/1.jpg');">
+		<div class="wrap-login100">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+				<span class="login100-form-logo">
+					<i class="zmdi zmdi-landscape"></i>
+				</span>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+				<span class="login100-form-title p-b-34 p-t-27">
+					Sign Up
+				</span>
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+          <div class="wrap-input100 validate-input" data-validate = "Enter username">
+            <%= f.email_field :email, placeholder:"Email", class:"input100"%>
+					  <span class="focus-input100" data-placeholder=""></span>
+				  </div>
+
+          <div class="wrap-input100 validate-input" data-validate="Enter password">
+					<%= f.password_field :password, placeholder:"Password",   class:"input100"%>
+					<span class="focus-input100" data-placeholder=""></span>
+				</div>
+				<div class="wrap-input100 validate-input" data-validate="Enter password">
+					<%= f.password_field :password_confirmation, placeholder:"Password",   class:"input100"%>
+					<span class="focus-input100" data-placeholder=""></span>
+				</div>
+
+
   
-  <div class="field">
-    <%= f.label :full_name %><br />
-    <%= f.text_field :full_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum and 20 characters maximum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions" >
+    <%= f.submit "Sign up", class:"login100-form-btn"%>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+		</div>
+	</div>
+</div>
