--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -31,7 +31,17 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="page-scroll">Sign In</a></li>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>        
+          </li>
+        <% else %>
+          <li>
+            <%= link_to('Sign In', new_user_session_path)  %>  
+            <%= link_to('Sign Up', new_user_registration_path)  %>  
+          </li>
+        <% end %>
+        
       </ul>
     </div>
   </div>
