--- a/app/views/login/home.html.erb
+++ b/app/views/login/home.html.erb
@@ -12,13 +12,17 @@
 				</span>
 
 				<div class="wrap-input100 validate-input" data-validate = "Enter username">
+					
 					<input class="input100" type="text" name="username" placeholder="Username">
-					<span class="focus-input100" data-placeholder=""></span>
+					<span <%= f.label :email %><br /></span>
+
 				</div>
 
 				<div class="wrap-input100 validate-input" data-validate="Enter password">
+					
 					<input class="input100" type="password" name="pass" placeholder="Password" id="myInput">
-					<span class="focus-input100" data-placeholder=""></span>
+					<span <%= f.label :password %><br />></span>
+
 				</div>
 				<div class="contact100-form-show">
 					<input type="checkbox" class= "input-show" onclick="myFunction()">
