--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -33,6 +33,9 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li>
+            <div>
+            chúc <%= current_user.full_name %> một ngày tốt lành
+            </div>
             <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>        
           </li>
         <% else %>
