--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,39 +9,29 @@
 				<span class="login100-form-title p-b-34 p-t-27">
 					Sign Up
 				</span>
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
           <div class="wrap-input100 validate-input" data-validate = "Enter username">
             <%= f.email_field :email, placeholder:"Email", class:"input100"%>
 					  <span class="focus-input100" data-placeholder=""></span>
 				  </div>
-				  
-				  <div class="wrap-input100 validate-input" data-validate = "Enter username">
-            <%= f.text_field :full_name, placeholder:"full name", class:"input100"%>
-					  <span class="focus-input100" data-placeholder=""></span>
-				  </div>
 
           <div class="wrap-input100 validate-input" data-validate="Enter password">
-        	    <% if @minimum_password_length %>
-   						 <em>(<%= @minimum_password_length %> characters minimum and 20 characters maximum)</em>
-    					<% end %><br />
 					<%= f.password_field :password, placeholder:"Password",   class:"input100"%>
 					<span class="focus-input100" data-placeholder=""></span>
 				</div>
 				<div class="wrap-input100 validate-input" data-validate="Enter password">
-					<%= f.password_field :password_confirmation, placeholder:"new password",   class:"input100"%>
+					<%= f.password_field :password_confirmation, placeholder:"Password",   class:"input100"%>
 					<span class="focus-input100" data-placeholder=""></span>
 				</div>
 
 
   
   <div class="actions" >
-    <%= f.submit "Sign up"%>
+    <%= f.submit "Sign up", class:"login100-form-btn"%>
   </div>
 <% end %>
 
+<%= render "devise/shared/links" %>
 		</div>
 	</div>
 </div>
-
-
