--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -98,7 +98,35 @@
 <div id="about">
   <div class="container">
     <div class="row">
+
+      <!--- new game --->
+    
       <div class="col-md-9">
+        <div class="col-md-12">
+          <div class="col-md-12">
+            <h2>New Games Releases</h2>
+          </div>
+          <div class="col-md-12">
+            <div class="carousel slide multi-item-carousel" id="theCarousel">
+              <div class="carousel-inner">
+                <% @game_news.each.with_index do |game, index| %>
+                  <div class="item <%= index == 0 ? 'active' : '' %>">
+                    <div class="image-box-item col-xs-4"><a href="#1">
+                      <%= image_tag(game.photos.last.image, :class => "img-responsive") %></a>
+                      <div class="text-center game-item">
+                        <strong><%=game.name%></strong>
+                        <br/>
+                          <strong><%=time_ago_in_words(game.relase_date)%> ago</strong>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
+              <a class="left carousel-control" href="#theCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+              <a class="right carousel-control" href="#theCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+            </div>
+          </div>
+        </div>
         <div class="col-md-12">
           <div class="col-md-12">
             <h2>Top Games</h2>
@@ -169,60 +197,14 @@
         </div>
         <div class="row ">
           <div class="col-md-12 text-center related-game ">Related Game</div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 1</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 2</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 3</strong>
-              <hr>
-              <strong>15-11-2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 4</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 5</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 6</strong>
-              <hr>
-              <strong>15-11-2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 7</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 8</strong>
-              <hr>
-              <strong>15/11/2018</strong>
-            </a>
-          </div>
-          <div class="col-md-12 text-center list-related-game">
-            <a href="#"><strong>Game 9</strong>
-              <hr>
-              <strong>15-11-2018</strong>
-            </a>
-          </div>
+          <% @game_upcoming.each do |game|%>
+            <div class="col-md-12 text-center list-related-game">
+              <a href="#"><strong><%=game.name%></strong>
+                <hr>
+                <strong><%=game.relase_date.strftime("%F")%></strong>
+              </a>
+            </div>
+          <%end%>
         </div>
       </div>
     </div>
