fix nil game's score error & tiny login display

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
 				  </div>
 				  
 				  <div class="wrap-input100 validate-input" data-validate = "Enter username">
-            <%= f.text_field :full_name, placeholder:"full name", class:"input100"%>
+            <%= f.text_field :full_name, placeholder:"Full name", class:"input100"%>
 					  <span class="focus-input100" data-placeholder=""></span>
 				  </div>
 
@@ -29,7 +29,7 @@
 					<span class="focus-input100" data-placeholder=""></span>
 				</div>
 				<div class="wrap-input100 validate-input" data-validate="Enter password">
-					<%= f.password_field :password_confirmation, placeholder:"new password",   class:"input100"%>
+					<%= f.password_field :password_confirmation, placeholder:"Password confirmation",   class:"input100"%>
 					<span class="focus-input100" data-placeholder=""></span>
 				</div>
 
