--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -118,7 +118,7 @@
           <div class="col-md-12">
             <h2>Top Games</h2>
           </div>
-          <% @game_full.each do |game| %>
+          <% @game_top.each do |game| %>
             <div class="col-md-12">
               <div class="col-xs-12 col-md-4">
                 <%= image_tag(game[:image], :class => "img-responsive") %>
