--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
 <div class="limiter">
 	<div class="container-login100" style="background-image: url('../assets/slider/1.jpg');">
 		<div class="wrap-login100">
-
 			<span class="login100-form-logo">
 				<img src="../assets/logo.jpg" alt="">
+
 			</span>
 
 			<span class="login100-form-title p-b-34 p-t-27">
@@ -15,10 +15,12 @@
 				<%= f.email_field :email, placeholder:"Email", class:"input100"%>
 				<span class="focus-input100" data-placeholder=""></span>
 			</div>
+
 			<div class="wrap-input100 validate-input" data-validate = "Enter username">
-				<%= f.text_field :full_name, placeholder:"full name", class:"input100"%>
+				<%= f.text_field :full_name, placeholder:"Full name", class:"input100"%>
 				<span class="focus-input100" data-placeholder=""></span>
 			</div>
+
 			<div class="wrap-input100 validate-input" data-validate="Enter password">
 				<% if @minimum_password_length %>
 				<em>(<%= @minimum_password_length %> characters minimum and 20 characters maximum)</em>
@@ -27,13 +29,14 @@
 				<span class="focus-input100" data-placeholder=""></span>
 			</div>
 			<div class="wrap-input100 validate-input" data-validate="Enter password">
-				<%= f.password_field :password_confirmation, placeholder:"new password",   class:"input100"%>
+				<%= f.password_field :password_confirmation, placeholder:"Password confirmation",   class:"input100"%>
 				<span class="focus-input100" data-placeholder=""></span>
 			</div>
 			<div class="actions" >
 				<%= f.submit "Sign up"%>
 			</div>
 			<% end %>
+
 		</div>
 	</div>
 </div>
