--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -31,7 +31,7 @@
           <span class="focus-input100" data-placeholder=""></span>
         </div>
         <div class="actions" >
-          <%= f.submit "Sign up"%>
+          <%= f.submit "Sign up", class:"login100-form-btn"%>
         </div>
       <% end %>
     </div>
