--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Xin chào, chúc một ngày tốt lành<%= @email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Bạn nhận đuợc email này vì bạn đã nhấn nút quên mật khẩu, </p>
+<p></p>hi vọng rằng bạn chỉ đùa vì nếu ko thì bạn phãi tạo mật khẩu mối tại đây</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>Hoặc là bạn có thể cố nhờ ra mật khẩu trong lúc xem bộ phim </p>
+<p>"Three Billboards Outside Ebbing, Missour" (3 tấm biến quảng cáo), phim rất hay</p>
