--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -1,12 +1,12 @@
 <%= render 'page_title', title: 'GemKeK' %>
 <nav id="menu" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-    <div class="col-md-3">
+    <div class="col-md-2">
       <a class="navbar-brand logo-header" href="#page-top">
         <img src="/assets/logo.jpg" alt="logo">
       </a>
     </div>
-    <div class="collapse navbar-collapse col-md-9" id="bs-example-navbar-collapse-1 ">
+    <div class="col-md-10 " id="bs-example-navbar-collapse-1 ">
       <ul class="nav navbar-nav navbar-left">
         <li><a href="#about" class="page-scroll">PC</a></li>
         <li><a href="#services" class="page-scroll">PS4</a></li>
