--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -591,3 +591,7 @@ label {
 .fix-pading-content {
   padding:0px !important;
 }
+
+#bs-example-navbar-collapse-1  {
+  margin-left:0px !important;
+}
