--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @review, url: reviews_path do |f| %>
+<%= form_for @review  do |f| %>
   <div class="field">
     <%= f.text_field :title, placeholder: "Title..." %>
   </div>
