--- a/app/views/search/advance_search.html.erb
+++ b/app/views/search/advance_search.html.erb
@@ -5,22 +5,24 @@
       <div class="col-md-9 fix-pading-content">
         <h2>Search Result</h2>
         <div class="col-md-12 fix-padding-content">
-          <%= form_tag url_for(:controller => 'search', :action => 'index'), :method => 'get' do %>
+          <%= form_tag url_for(:controller => 'search', :action => 'advance_search'), :method => 'get' do %>
             <div class="col-xs-12 col-md-3">
               Genre:
-              <%= select_tag "genre", options_from_collection_for_select(Genre.all, :id, :name), {:class => 'form-control', :blank? => true} %>
+              <%= select_tag "genre", options_from_collection_for_select(Genre.all, :id, :name), {:class => 'form-control', :prompt => @params_genre} %>
             </div>
 
             <div class="col-xs-12 col-md-3">
               Platform:
-              <%= select_tag "platform", options_from_collection_for_select(Platform.all, :id, :name), {:class => 'form-control'} %>
+              <%= select_tag "platform", options_from_collection_for_select(Platform.all, :id, :name), {:class => 'form-control', :prompt => @params_platform} %>
             </div>
 
             <div class="col-xs-12 col-md-3">
               Score:
-              <%= select_tag "score", options_for_select(["1-2", "2-3", "3-4", "4-5"]), {:class => 'form-control'} %>
+              <%= select_tag "score", options_for_select(["1-2", "2-3", "3-4", "4-5"]), {:class => 'form-control', :prompt => @params_score} %>
             </div>
-            <% hidden_field_tag("game", @games) %>
+            <% @search_results.each do |id| %>
+              <%= hidden_field_tag "game_ids[]", id.to_i %>
+            <% end %>
             <div class="col-xs-12 col-md-3">
               <br>
               <%= submit_tag "Filter", class: 'btn btn-default' %>
@@ -29,8 +31,8 @@
         </div>
         <br><br><br><br>
         <div class="col-md-12 fix-pading-content">
-          <% if @search_results == nil %>
-            No matching result!
+          <% if @search_results.size == 0 %>
+            No matching result found!
           <% else %>
             <% @search_results.each do |id| %>
               <% game = Game.find(id) %>
