--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 
   <nav id="menu" class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-      <div class="col-md-3">
+      <div class="col-md-2">
         <a class="navbar-brand logo-header" href="#page-top">
           <img src="/assets/logo.jpg" alt="logo">
         </a>
       </div>
-      <div class="collapse navbar-collapse col-md-9" id="bs-example-navbar-collapse-1 ">
+      <div class="col-md-10" id="bs-example-navbar-collapse-1 ">
         <ul class="nav navbar-nav navbar-left">
           <li><a href="#about" class="page-scroll">PC</a></li>
           <li><a href="#services" class="page-scroll">PS4</a></li>
@@ -32,37 +32,35 @@
             </ul>
           </li>
           <li>
-            <div>
-              <%= form_tag search_index_path, :method => 'get', :class => "navbar-form navbar-left", :rolze => "search" do %>
-                <p>
-                  <%= text_field_tag :search, params[:search], placeholder: 'Search' %>
-                  <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
-                </p>
-              <% end %>
+            <%= form_tag search_index_path, :method => 'get', :class => "navbar-form navbar-left", :rolze => "search" do %>
+            <div class="form-group">
+              <%= text_field_tag :search, params[:search], placeholder: 'Search', :class => "form-control" %>
             </div>
+            <%= submit_tag "Search", name: nil, class: 'btn btn-default' %>
+            <% end %> 
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <li class="dropdown">
-              <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#"><b><%= current_user.full_name %></b>
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Profile</a></li>
-                <% if current_user.is_admin %>
-                  <li><a href="#">Admin</a></li>
-                <% end %>
-                <li><a href="#"><%= link_to('Sign Out', destroy_user_session_path, method: :delete) %> </a></li>
-              </ul>
-            </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#"><b><%= current_user.full_name %></b>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Profile</a></li>
+              <% if current_user.is_admin %>
+              <li><a href="#">Admin</a></li>
+              <% end %>
+              <li><a href="#"><%= link_to('Sign Out', destroy_user_session_path, method: :delete) %> </a></li>
+            </ul>
+          </li>
           <% else %>
-            <li>
-              <%= link_to('Sign In', new_user_session_path) %>
-            </li>
-            <li>
-              <%= link_to('Sign Up', new_user_registration_path) %>
-            </li>
+          <li>
+            <%= link_to('Sign In', new_user_session_path) %>
+          </li>
+          <li>
+            <%= link_to('Sign Up', new_user_registration_path) %>
+          </li>
           <% end %>
 
         </ul>
@@ -72,7 +70,7 @@
 </head>
 
 <body>
-<%= yield %>
+  <%= yield %>
 </body>
 
 
@@ -114,28 +112,28 @@
         <h4>Contact Info</h4>
         <p><span>Address</span>4321 California St,<br>
           San Francisco, CA 12345</p>
+        </div>
+        <div class="contact-item">
+          <p><span>Phone</span> +1 123 456 1234</p>
+        </div>
+        <div class="contact-item">
+          <p><span>Email</span> info@company.com</p>
+        </div>
       </div>
-      <div class="contact-item">
-        <p><span>Phone</span> +1 123 456 1234</p>
-      </div>
-      <div class="contact-item">
-        <p><span>Email</span> info@company.com</p>
-      </div>
-    </div>
-    <div class="col-md-12">
-      <div class="row">
-        <div class="social">
-          <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-          </ul>
+      <div class="col-md-12">
+        <div class="row">
+          <div class="social">
+            <ul>
+              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </div>
 <!-- Footer Section -->
 <div id="footer">
